--- a/Gopnik's Adventure/Base.lproj/Main.storyboard
+++ b/Gopnik's Adventure/Base.lproj/Main.storyboard
@@ -43,9 +43,6 @@
                                 <state key="normal" title="Up">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="FLu-gT-hsP" appends="YES" id="Jwe-7u-O8W"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbK-7V-tbw">
                                 <rect key="frame" x="250" y="774" width="80" height="55"/>
@@ -55,9 +52,6 @@
                                 <state key="normal" title="Right">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="9Lh-tm-Prs" appends="YES" id="Efc-Hu-hf2"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jKg-gi-jR3">
                                 <rect key="frame" x="84" y="774" width="80" height="55"/>
@@ -67,15 +61,7 @@
                                 <state key="normal" title="Left">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="2O9-x9-Dmh" appends="YES" id="ldm-rG-KNd"/>
-                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dzt-hS-mgo">
-                                <rect key="frame" x="97" y="629" width="23" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fOl-nH-HoO">
                                 <rect key="frame" x="167" y="830" width="80" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -84,10 +70,12 @@
                                 <state key="normal" title="Down">
                                     <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="LNg-2f-FSm" appends="YES" id="gVu-KF-4oF"/>
-                                </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dzt-hS-mgo">
+                                <rect key="frame" x="97" y="629" width="23" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -95,32 +83,16 @@
                     <connections>
                         <outlet property="botomWallImage" destination="Z2U-0l-BVf" id="h6h-31-i2B"/>
                         <outlet property="characterImage" destination="dzt-hS-mgo" id="7o1-5m-4T8"/>
+                        <outlet property="downButton" destination="fOl-nH-HoO" id="6hh-he-37I"/>
+                        <outlet property="leftButton" destination="jKg-gi-jR3" id="g5p-Dh-JjU"/>
                         <outlet property="leftWallImage" destination="j0a-bV-WhJ" id="uz1-yp-41U"/>
+                        <outlet property="rightButton" destination="zbK-7V-tbw" id="R3s-jZ-oVg"/>
                         <outlet property="rightWallImage" destination="hYF-Dn-6dY" id="crx-yc-vFc"/>
                         <outlet property="topWallImage" destination="oHb-Ko-ZIc" id="1Pg-HO-hz9"/>
+                        <outlet property="upButton" destination="ceG-l5-p6E" id="KmZ-7w-x65"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="FLu-gT-hsP">
-                    <connections>
-                        <action selector="upButtonPressed:" destination="BYZ-38-t0r" id="rNx-w4-5LE"/>
-                    </connections>
-                </pongPressGestureRecognizer>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="9Lh-tm-Prs">
-                    <connections>
-                        <action selector="rightButtonPressed:" destination="BYZ-38-t0r" id="7ua-cy-zpp"/>
-                    </connections>
-                </pongPressGestureRecognizer>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="LNg-2f-FSm">
-                    <connections>
-                        <action selector="downButtonPressed:" destination="BYZ-38-t0r" id="Mjz-YJ-gko"/>
-                    </connections>
-                </pongPressGestureRecognizer>
-                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="2O9-x9-Dmh">
-                    <connections>
-                        <action selector="leftButtonPressed:" destination="BYZ-38-t0r" id="PG5-1n-7EZ"/>
-                    </connections>
-                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
         </scene>
